@@ -1,172 +1,235 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.jspresso.hrsample</groupId>
-    <artifactId>hrsample</artifactId>
-    <version>5.0.0-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
-  </parent>
-  <artifactId>hrsample-webapp</artifactId>
-  <packaging>war</packaging>
-  <name>HR Sample CE - Webapp</name>
-  <dependencies>
-    <dependency>
-      <groupId>org.jspresso.hrsample</groupId>
-      <artifactId>hrsample-startup-remote</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.jspresso.hrsample</groupId>
-      <artifactId>hrsample-startup-flex-config</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.jspresso.hrsample</groupId>
-      <artifactId>hrsample-startup-flex-client</artifactId>
-      <type>swf</type>
-    </dependency>
-    <dependency>
-      <groupId>org.jspresso.hrsample</groupId>
-      <artifactId>hrsample-startup-qooxdoo-client</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.jspresso.framework</groupId>
-      <artifactId>jspresso-qooxdoo-server</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-ehcache</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>commons-collections</groupId>
-      <artifactId>commons-collections</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-dbcp2</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.hsqldb</groupId>
-      <artifactId>hsqldb</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.flex.blazeds</groupId>
-      <artifactId>flex-messaging-remoting</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.flex.blazeds</groupId>
-      <artifactId>flex-messaging-proxy</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <scope>provided</scope>
-    </dependency>
-  </dependencies>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <configuration>
-          <warName>${project.artifactId}</warName>
-          <webappDirectory>${project.build.directory}/${project.artifactId}</webappDirectory>
-          <webResources>
-            <resource>
-              <directory>${project.build.directory}/flex-client</directory>
-            </resource>
-          </webResources>
-          <overlays>
-            <overlay>
-              <groupId>org.jspresso.hrsample</groupId>
-              <artifactId>hrsample-startup-flex-config</artifactId>
-              <type>jar</type>
-              <targetPath>WEB-INF/flex</targetPath>
-            </overlay>
-            <overlay>
-              <groupId>org.jspresso.hrsample</groupId>
-              <artifactId>hrsample-startup-qooxdoo-client</artifactId>
-              <type>jar</type>
-              <targetPath>html5</targetPath>
-            </overlay>
-          </overlays>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <executions>
-          <execution>
-            <phase>generate-resources</phase>
-            <goals>
-              <goal>copy-dependencies</goal>
-            </goals>
-            <configuration>
-              <stripVersion>true</stripVersion>
-              <includeTypes>swf</includeTypes>
-              <outputDirectory>${project.build.directory}/flex-client/flex</outputDirectory>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
-  <profiles>
-    <profile>
-      <id>jboss4</id>
-      <properties>
-        <!-- Downgrade Spring / Hibernate for JBoss below 6.0 support -->
-        <spring.version>3.2.11.RELEASE</spring.version>
-        <hibernate.version>4.2.12.Final</hibernate.version>
-      </properties>
-      <dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.jspresso.hrsample</groupId>
+        <artifactId>hrsample</artifactId>
+        <version>5.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+    <artifactId>hrsample-webapp</artifactId>
+    <packaging>war</packaging>
+    <name>HR Sample CE - Webapp</name>
+    <dependencies>
         <dependency>
-          <groupId>org.picketbox</groupId>
-          <artifactId>jbosssx</artifactId>
-          <scope>provided</scope>
+            <groupId>org.jspresso.hrsample</groupId>
+            <artifactId>hrsample-startup-remote</artifactId>
         </dependency>
         <dependency>
-          <groupId>org.picketbox</groupId>
-          <artifactId>picketbox-spi-bare</artifactId>
-          <scope>provided</scope>
-          <exclusions>
-            <exclusion>
-              <groupId>javax.servlet</groupId>
-              <artifactId>servlet-api</artifactId>
-            </exclusion>
-          </exclusions>
+            <groupId>org.jspresso.hrsample</groupId>
+            <artifactId>hrsample-startup-flex-config</artifactId>
         </dependency>
         <dependency>
-          <groupId>stax</groupId>
-          <artifactId>stax-api</artifactId>
-          <scope>provided</scope>
+            <groupId>org.jspresso.hrsample</groupId>
+            <artifactId>hrsample-startup-flex-client</artifactId>
+            <type>swf</type>
         </dependency>
         <dependency>
-          <groupId>xml-apis</groupId>
-          <artifactId>xml-apis</artifactId>
-          <version>1.0.b2</version>
-          <scope>provided</scope>
+            <groupId>org.jspresso.hrsample</groupId>
+            <artifactId>hrsample-startup-qooxdoo-client</artifactId>
         </dependency>
         <dependency>
-          <groupId>stax</groupId>
-          <artifactId>stax</artifactId>
-          <version>1.2.0</version>
-          <scope>provided</scope>
+            <groupId>org.jspresso.framework</groupId>
+            <artifactId>jspresso-qooxdoo-server</artifactId>
         </dependency>
         <dependency>
-          <groupId>javax.xml.stream</groupId>
-          <artifactId>stax-api</artifactId>
-          <version>1.0-2</version>
-          <scope>provided</scope>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-ehcache</artifactId>
         </dependency>
-      </dependencies>
-    </profile>
-  </profiles>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flex.blazeds</groupId>
+            <artifactId>flex-messaging-remoting</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flex.blazeds</groupId>
+            <artifactId>flex-messaging-proxy</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <warName>${project.artifactId}</warName>
+                    <webappDirectory>${project.build.directory}/${project.artifactId}</webappDirectory>
+                    <webResources>
+                        <resource>
+                            <directory>${project.build.directory}/flex-client</directory>
+                        </resource>
+                    </webResources>
+                    <overlays>
+                        <overlay>
+                            <groupId>org.jspresso.hrsample</groupId>
+                            <artifactId>hrsample-startup-flex-config</artifactId>
+                            <type>jar</type>
+                            <targetPath>WEB-INF/flex</targetPath>
+                        </overlay>
+                        <overlay>
+                            <groupId>org.jspresso.hrsample</groupId>
+                            <artifactId>hrsample-startup-qooxdoo-client</artifactId>
+                            <type>jar</type>
+                            <targetPath>html5</targetPath>
+                        </overlay>
+                    </overlays>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <stripVersion>true</stripVersion>
+                            <includeTypes>swf</includeTypes>
+                            <outputDirectory>${project.build.directory}/flex-client/flex</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.1</version>
+                <configuration>
+                    <port>8080</port>
+                    <path>/hrsample-webapp</path>
+                    <warDirectory> ${project.build.directory}/hrsample-webapp</warDirectory>
+                    <useTestClasspath>false</useTestClasspath>
+                    <useSeparateTomcatClassLoader>true</useSeparateTomcatClassLoader>
+                    <systemProperties>
+                        <JAVA_OPTS>-Xms256m -Xmx512m -Xmx1024m -XX:MaxPermSize=256m</JAVA_OPTS>
+                        <java.security.auth.login.config>${project.basedir}/src/main/webapp/conf/jaas.config</java.security.auth.login.config>
+                    </systemProperties>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.hsqldb</groupId>
+                        <artifactId>hsqldb</artifactId>
+                        <version>${hsql.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>log4j</groupId>
+                        <artifactId>log4j</artifactId>
+                        <version>${log4j.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-log4j12</artifactId>
+                        <version>${slf4j.version}</version>
+                    </dependency>
+                    <!--<dependency>-->
+                        <!--<groupId>org.picketbox</groupId>-->
+                        <!--<artifactId>jbosssx</artifactId>-->
+                        <!--<version>${jbosssx.version}</version>-->
+                    <!--</dependency>-->
+                    <!--<dependency>-->
+                        <!--<groupId>org.picketbox</groupId>-->
+                        <!--<artifactId>picketbox-spi-bare</artifactId>-->
+                        <!--<version>${jbosssx.version}</version>-->
+                        <!--<exclusions>-->
+                            <!--<exclusion>-->
+                                <!--<groupId>javax.servlet</groupId>-->
+                                <!--<artifactId>servlet-api</artifactId>-->
+                            <!--</exclusion>-->
+                        <!--</exclusions>-->
+                    <!--</dependency>-->
+                    <!--<dependency>-->
+                        <!--<groupId>org.jboss.logging</groupId>-->
+                        <!--<artifactId>jboss-logging</artifactId>-->
+                        <!--<version>3.1.3.GA</version>-->
+                    <!--</dependency>-->
+                    <!--<dependency>-->
+                        <!--<groupId>javax.transaction</groupId>-->
+                        <!--<artifactId>jta</artifactId>-->
+                        <!--<version>1.1</version>-->
+                    <!--</dependency>-->
+                </dependencies>
+            </plugin>
+
+        </plugins>
+    </build>
+    <profiles>
+        <profile>
+            <id>jboss4</id>
+            <properties>
+                <!-- Downgrade Spring / Hibernate for JBoss below 6.0 support -->
+                <spring.version>3.2.11.RELEASE</spring.version>
+                <hibernate.version>4.2.12.Final</hibernate.version>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>org.picketbox</groupId>
+                    <artifactId>jbosssx</artifactId>
+                    <scope>provided</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.picketbox</groupId>
+                    <artifactId>picketbox-spi-bare</artifactId>
+                    <scope>provided</scope>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>javax.servlet</groupId>
+                            <artifactId>servlet-api</artifactId>
+                        </exclusion>
+                    </exclusions>
+                </dependency>
+                <dependency>
+                    <groupId>stax</groupId>
+                    <artifactId>stax-api</artifactId>
+                    <scope>provided</scope>
+                </dependency>
+                <dependency>
+                    <groupId>xml-apis</groupId>
+                    <artifactId>xml-apis</artifactId>
+                    <version>1.0.b2</version>
+                    <scope>provided</scope>
+                </dependency>
+                <dependency>
+                    <groupId>stax</groupId>
+                    <artifactId>stax</artifactId>
+                    <version>1.2.0</version>
+                    <scope>provided</scope>
+                </dependency>
+                <dependency>
+                    <groupId>javax.xml.stream</groupId>
+                    <artifactId>stax-api</artifactId>
+                    <version>1.0-2</version>
+                    <scope>provided</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
 </project>
